--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  mask_text_input_formatter: ^2.5.0
   flutter_hooks: ^0.20.3
   form_builder_validators: ^9.1.0
   flutter_screenutil: 
+  country_picker: ^2.0.22
 
 dev_dependencies:
   flutter_test:
